feat: add ability to block another user
